<resources>
    <string name="app_name">Chore Tracker</string>


    <string name="save_button">Save</string>
    <string name="Child_radioButton">Child</string>
    <string name="adult_radioButton">Adult</string>
    <string name="memberName_editText">Member Name</string>
    <string name="email_editText">Email</string>
    <string name="password_editText">Password</string>
    <string name="confirmPassword_editText">Confirm Password</string>
    <string name="addMember_button">Add Member</string>
    <string name="done_button">Done</string>
    <string name="allChores_textView">All Chores</string>
    <string name="login_button">Login</string>
    <string name="createAccount_button">Create Account</string>
    <string name="choreName_textView">Chore Name</string>
    <string name="newChore_textView">New Chore</string>
    <string name="chore_textView">Chore:</string>String />
    <string name="enterChore_hint">Enter Chore</string>
    <string name="createdBy_textView">Created By:</string>
    <string name="enterCreatedBy_hint">Enter Username</string>
    <string name="dueDate_textView">Due Date: </string>
    <string name="enterDueDate_hint">Enter Date due</string>
    <string name="description_textView">Description:</string>
    <string name="description_hint">Enter Description</string>
    <string name="rewards_textView">Rewards:</string>
    <string name="enterRewards_hint">Enter Rewards</string>
    <string name="penalty_textView">Penalty:</string>
    <string name="enterPenalty_hint">Enter Penalty</string>
    <string name="assign_textView">Assign:</string>
    <string name="enterPerson_hint">Person</string>
    <string name="add_button">Add</string>
    <string name="choreDetails_textView">Chore Details</string>
    <string name="delete_button">Delete</string>
    <string name="assignToMe_button">Assign To Me</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="generalList_textView">General List</string>
    <string name="todoList_textView">To-Do List</string>
    <string name="completed_textView">Completed List</string>
    <string name="completedDate_textView">Completed Date: </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="addChore_textView">Add New Chore</string>
    <string name="viewOthers_textView">View Children\'s Profiles</string>
    <string name="addNewMember_textView">Add New Member</string>
    <string name="EnterDate_TextView">Enter date.</string>
    <string name="EnterChore_TextView">Enter Chore.</string>
    <string name="EnterChoreDescription_TextView">Enter chore description</string>
    <string name="EnterRewardPoints_TextView">Enter reward points</string>
    <string name="EnterPenalty_TextView">Enter penalty</string>
    <string name="complete_button">Complete</string>
</resources>
