<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general_list"
            android:title="@string/generalList_textView" />
        <item
            android:id="@+id/nav_todo_list"
            android:title="@string/todoList_textView" />
        <item
            android:id="@+id/nav_completed_list"
            android:title="@string/completed_textView" />
    </group>

    <item>
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_addChore"
                    android:title="@string/addChore_textView" />
                <item
                    android:id="@+id/nav_addOtherMember"
                    android:title="@string/addNewMember_textView" />
                <item
                    android:id="@+id/nav_viewOthers"
                    android:title="@string/viewOthers_textView" />
            </group>
        </menu>
    </item>

</menu>
