<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahame_000.seg2105.CreateAccount">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/Email_EditText_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_editText"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Password_EditText_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_editText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ConfirmPassword_EditText_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmPassword_editText"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/AddMember_Button_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addMember_button" />

        <Button
            android:id="@+id/Done_Button_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
